tests/baselines/reference/noImplicitAnyForIn.errors.txt
tests/cases/compiler/noImplicitAnyForIn.ts(7,18): error TS7017: Element implicitly has an 'any' type because type '{}' has no index signature.
tests/cases/compiler/noImplicitAnyForIn.ts(14,18): error TS7017: Element implicitly has an 'any' type because type '{}' has no index signature.
tests/cases/compiler/noImplicitAnyForIn.ts(28,5): error TS7005: Variable 'n' implicitly has an 'any[][]' type.
tests/cases/compiler/noImplicitAnyForIn.ts(30,6): error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.


==== tests/cases/compiler/noImplicitAnyForIn.ts (4 errors) ====
    var x: {}[] = [[1, 2, 3], ["hello"]];
    
    for (var i in x) {
        for (var j in x[i]) {
    
            //Should yield an implicit 'any' error
            var _j = x[i][j];
                     ~~~~~~~
!!! error TS7017: Element implicitly has an 'any' type because type '{}' has no index signature.
        }
    
        for (var k in x[0]) {
            var k1 = x[0];
    
            //Should yield an implicit 'any' error
            var k2 = k1[k];
                     ~~~~~
!!! error TS7017: Element implicitly has an 'any' type because type '{}' has no index signature.
        }
    }
    
    for (var a in x) {
        // Should yield an implicit 'any' error.
        var b;
    
        var c = a || b;
    }
    
    var idx = 0;
    var m = [1, 2, 3, 4, 5];
    // Should yield an implicit 'any' error.
    var n = [[]] || [];
        ~
!!! error TS7005: Variable 'n' implicitly has an 'any[][]' type.
    
    for (n[idx++] in m);
         ~~~~~~~~
!!! error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.